fixed spacing to be dynamic

--- a/home/home.css
+++ b/home/home.css
@@ -11,7 +11,7 @@ body {
 }
 
 #bodytitle {
-	margin-top: 150px;
+	margin-top: 10%;
 }
 
 #navtitle {
